# breakout-game

./: .gitignore  CMakeLists.txt  README.md  run.sh
data/shaders/: particle.vs
include/: game_object.h  text_renderer.h
src/: game.cpp  game_object.cpp  main.cpp  particle_generator.cpp  reource_manager.cpp  text_renderer.cpp
